Publish current local workspace